--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
         <liquibase.version>4.23.1</liquibase.version>
         <postgresql.version>42.6.0</postgresql.version>
         <h2database.version>2.2.222</h2database.version>
+        <testcontainers.version>1.19.4</testcontainers.version>
+        <testcontainers.jupiter.version>1.19.4</testcontainers.jupiter.version>
+        <testcontainers.postgresql.version>1.17.6</testcontainers.postgresql.version>
+
     </properties>
 
     <dependencies>
@@ -64,7 +68,26 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
 
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${testcontainers.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${testcontainers.postgresql.version}</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
