--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,10 @@
         <profile>
             <id>test</id>
             <properties>
-                <liquibase.config>src/main/resources/db/liquibase-test.properties</liquibase.config>
+                <liquibase.changeLogFile>db/changelog.xml</liquibase.changeLogFile>
+                <liquibase.url>jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;</liquibase.url>
+                <liquibase.username></liquibase.username>
+                <liquibase.password></liquibase.password>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -21,7 +24,19 @@
         <profile>
             <id>production</id>
             <properties>
-                <liquibase.config>src/main/resources/db/liquibase.properties</liquibase.config>
+                <liquibase.changeLogFile>db/changelog.xml</liquibase.changeLogFile>
+                <liquibase.url>jdbc:postgresql://127.0.0.1:5432/monitoring_service</liquibase.url>
+                <liquibase.username>postgres</liquibase.username>
+                <liquibase.password>password</liquibase.password>
+            </properties>
+        </profile>
+        <profile>
+            <id>docker</id>
+            <properties>
+                <liquibase.changeLogFile>db/changelog.xml</liquibase.changeLogFile>
+                <liquibase.url>${docker.db.url.jdbc}</liquibase.url>
+                <liquibase.username>${docker.db.username.jdbc}</liquibase.username>
+                <liquibase.password>${docker.db.password.jdbc}</liquibase.password>
             </properties>
         </profile>
     </profiles>
@@ -93,12 +108,16 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>4.23.1</version>
+                <version>4.15.0</version>
                 <configuration>
-                    <propertyFile>${liquibase.config}</propertyFile>
+                    <changeLogFile>${liquibase.changeLogFile}</changeLogFile>
+                    <url>${liquibase.url}</url>
+                    <username>${liquibase.username}</username>
+                    <password>${liquibase.password}</password>
                 </configuration>
                 <executions>
                     <execution>
