--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <profile>
             <id>test</id>
             <properties>
-                <liquibase.changeLogFile>db/changelog.xml</liquibase.changeLogFile>
+                <liquibase.changeLogFile>src/main/resources/db/changelog.xml</liquibase.changeLogFile>
                 <liquibase.url>jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;</liquibase.url>
                 <liquibase.username></liquibase.username>
                 <liquibase.password></liquibase.password>
@@ -24,7 +24,7 @@
         <profile>
             <id>production</id>
             <properties>
-                <liquibase.changeLogFile>db/changelog.xml</liquibase.changeLogFile>
+                <liquibase.changeLogFile>src/main/resources/db/changelog.xml</liquibase.changeLogFile>
                 <liquibase.url>jdbc:postgresql://127.0.0.1:5432/monitoring_service</liquibase.url>
                 <liquibase.username>postgres</liquibase.username>
                 <liquibase.password>password</liquibase.password>
@@ -33,7 +33,7 @@
         <profile>
             <id>docker</id>
             <properties>
-                <liquibase.changeLogFile>db/changelog.xml</liquibase.changeLogFile>
+                <liquibase.changeLogFile>src/main/resources/db/changelog.xml</liquibase.changeLogFile>
                 <liquibase.url>${docker.db.url.jdbc}</liquibase.url>
                 <liquibase.username>${docker.db.username.jdbc}</liquibase.username>
                 <liquibase.password>${docker.db.password.jdbc}</liquibase.password>
