--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1"
@@ -16,19 +16,134 @@
         <servlet-name>servletName1</servlet-name>
         <servlet-class>ru.parfenov.server.servlets.start.StartServlet</servlet-class>
     </servlet>
+
     <servlet>
         <servlet-name>servletName2</servlet-name>
         <servlet-class>ru.parfenov.server.servlets.start.reg.RegServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>servletName3</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.AuthServlet</servlet-class>
+    </servlet>
 
+    <servlet>
+        <servlet-name>servletName4</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.admin.AdminServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>servletName5</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.client.ClientServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>servletName13</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.admin.adminmethods.GetAllUserServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>servletName14</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.admin.adminmethods.LastDataOfUserServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>servletName15</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.admin.adminmethods.HistoryOfDataOfUserServlet
+        </servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>servletName16</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.admin.adminmethods.SpecificMonthOfUserServlet
+        </servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>servletName17</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.admin.adminmethods.ViewUserHistoryServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>servletName23</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.client.clientmethods.SubmitDataServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>servletName24</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.client.clientmethods.ViewDataForSpecMonthServlet
+        </servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>servletName25</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.client.clientmethods.ViewDataHistoryServlet
+        </servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>servletName26</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.client.clientmethods.ViewLastDataServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>servletName100</servlet-name>
+        <servlet-class>ru.parfenov.server.servlets.start.login.LogOutServlet</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>servletName1</servlet-name>
         <url-pattern>/start</url-pattern>
     </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>servletName2</servlet-name>
         <url-pattern>/registration</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>servletName3</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>servletName4</servlet-name>
+        <url-pattern>/admin</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>servletName5</servlet-name>
+        <url-pattern>/client</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>servletName13</servlet-name>
+        <url-pattern>/all-users</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>servletName14</servlet-name>
+        <url-pattern>/last-data-of-user</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>servletName15</servlet-name>
+        <url-pattern>/history-data-user</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>servletName16</servlet-name>
+        <url-pattern>/spec-month-user</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>servletName17</servlet-name>
+        <url-pattern>/view-user-history</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>servletName23</servlet-name>
+        <url-pattern>/submit-data</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>servletName24</servlet-name>
+        <url-pattern>/spec-month</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>servletName25</servlet-name>
+        <url-pattern>/view-data-history</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>servletName26</servlet-name>
+        <url-pattern>/view-last-data</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>servletName100</servlet-name>
+        <url-pattern>/logout</url-pattern>
     </servlet-mapping>
 
 </web-app>
