--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,9 @@
         <gson.version>2.10</gson.version>
         <jackson.version>2.15.1</jackson.version>
         <mapstruct.version>1.6.0.Beta1</mapstruct.version>
+        <aspectj.version>1.9.20.1</aspectj.version>
+        <log4j.version>1.2.17</log4j.version>
+        <slf4j-log4j12.version>2.0.5</slf4j-log4j12.version>
     </properties>
 
     <dependencies>
@@ -126,6 +129,24 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j-log4j12.version}</version>
         </dependency>
 
     </dependencies>
