--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,14 @@
 
     <groupId>ru.parfenov</groupId>
     <artifactId>MonitoringService</artifactId>
+    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <profiles>
         <profile>
             <id>test</id>
             <properties>
-                <liquibase.changeLogFile>src/main/resources/db/changelog.xml</liquibase.changeLogFile>
+                <liquibase.changeLogFile>db/changelog.xml</liquibase.changeLogFile>
                 <liquibase.url>jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;</liquibase.url>
                 <liquibase.username></liquibase.username>
                 <liquibase.password></liquibase.password>
@@ -24,7 +25,7 @@
         <profile>
             <id>production</id>
             <properties>
-                <liquibase.changeLogFile>src/main/resources/db/changelog.xml</liquibase.changeLogFile>
+                <liquibase.changeLogFile>db/changelog.xml</liquibase.changeLogFile>
                 <liquibase.url>jdbc:postgresql://127.0.0.1:5432/monitoring_service</liquibase.url>
                 <liquibase.username>postgres</liquibase.username>
                 <liquibase.password>password</liquibase.password>
@@ -33,7 +34,7 @@
         <profile>
             <id>docker</id>
             <properties>
-                <liquibase.changeLogFile>src/main/resources/db/changelog.xml</liquibase.changeLogFile>
+                <liquibase.changeLogFile>db/changelog.xml</liquibase.changeLogFile>
                 <liquibase.url>${docker.db.url.jdbc}</liquibase.url>
                 <liquibase.username>${docker.db.username.jdbc}</liquibase.username>
                 <liquibase.password>${docker.db.password.jdbc}</liquibase.password>
@@ -52,7 +53,17 @@
         <testcontainers.version>1.19.4</testcontainers.version>
         <testcontainers.jupiter.version>1.19.4</testcontainers.jupiter.version>
         <testcontainers.postgresql.version>1.17.6</testcontainers.postgresql.version>
-
+        <javax.servlet.version>4.0.1</javax.servlet.version>
+        <gson.version>2.10</gson.version>
+        <jackson.version>2.15.1</jackson.version>
+        <mapstruct.version>1.6.0.Beta1</mapstruct.version>
+        <aspectj.version>1.9.20.1</aspectj.version>
+        <log4j.version>1.2.17</log4j.version>
+        <slf4j-log4j12.version>2.0.5</slf4j-log4j12.version>
+        <spring-core.version>6.1.4</spring-core.version>
+        <spring-beans.version>6.0.10</spring-beans.version>
+        <spring-context.version>6.0.10</spring-context.version>
+        <spring-webmvc.version>6.1.3</spring-webmvc.version>
     </properties>
 
     <dependencies>
@@ -104,11 +115,84 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javax.servlet.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j-log4j12.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring-core.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring-beans.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring-context.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring-webmvc.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>
+            </plugin>
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
@@ -208,6 +292,20 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>1.6.0.Beta1</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
             </plugin>
         </plugins>
     </build>
