Заработала аннотация @WebServlet(name = "", urlPatterns = "")

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,236 +4,11 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1"
-         metadata-complete="true">
+         metadata-complete="false">
 
     <display-name>SimpeServletDisplayName</display-name>
     <description>
         This is SimpeServlet
     </description>
-
-
-    <servlet>
-        <servlet-name>servletName1</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.StartServlet</servlet-class>
-    </servlet>
-
-    <servlet>
-        <servlet-name>servletName2</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.reg.RegServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName3</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.AuthServlet</servlet-class>
-    </servlet>
-
-    <servlet>
-        <servlet-name>servletName4</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.admin.AdminServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName5</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.client.ClientServlet</servlet-class>
-    </servlet>
-
-    <servlet>
-        <servlet-name>servletName13</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.admin.adminmethods.GetAllUserServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName14</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.admin.adminmethods.LastDataOfUserServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName15</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.admin.adminmethods.HistoryOfDataOfUserServlet
-        </servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName16</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.admin.adminmethods.SpecificMonthOfUserServlet
-        </servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName17</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.admin.adminmethods.ViewUserHistoryServlet</servlet-class>
-    </servlet>
-
-    <servlet>
-        <servlet-name>servletName23</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.client.clientmethods.SubmitDataServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName24</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.client.clientmethods.ViewDataForSpecMonthServlet
-        </servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName25</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.client.clientmethods.ViewDataHistoryServlet
-        </servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName26</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.client.clientmethods.ViewLastDataServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName100</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.start.login.LogOutServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>servletName1</servlet-name>
-        <url-pattern>/start</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-        <servlet-name>servletName2</servlet-name>
-        <url-pattern>/registration</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName3</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-        <servlet-name>servletName4</servlet-name>
-        <url-pattern>/admin</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName5</servlet-name>
-        <url-pattern>/client</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-        <servlet-name>servletName13</servlet-name>
-        <url-pattern>/all-users</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName14</servlet-name>
-        <url-pattern>/last-data-of-user</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName15</servlet-name>
-        <url-pattern>/history-data-user</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName16</servlet-name>
-        <url-pattern>/spec-month-user</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName17</servlet-name>
-        <url-pattern>/view-user-history</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-        <servlet-name>servletName23</servlet-name>
-        <url-pattern>/submit-data</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName24</servlet-name>
-        <url-pattern>/spec-month</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName25</servlet-name>
-        <url-pattern>/view-data-history</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName26</servlet-name>
-        <url-pattern>/view-last-data</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName100</servlet-name>
-        <url-pattern>/logout</url-pattern>
-    </servlet-mapping>
-
-
-
-    <servlet>
-        <servlet-name>servletName101</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.rest.reg.RestRegServlet</servlet-class>
-    </servlet>
-
-    <servlet>
-        <servlet-name>servletName110</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.rest.login.admin.RestAllUserServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName111</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.rest.login.admin.RestHistoryOfDataOfUserServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName112</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.rest.login.admin.RestLastDataOfUserServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName113</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.rest.login.admin.RestSpecMonthOfUserServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName114</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.rest.login.admin.RestUserHistoryServlet</servlet-class>
-    </servlet>
-
-    <servlet>
-        <servlet-name>servletName120</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.rest.login.client.RestDataHistoryServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName121</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.rest.login.client.RestLastDataServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName122</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.rest.login.client.RestSpecMonthServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>servletName123</servlet-name>
-        <servlet-class>ru.parfenov.server.servlets.rest.login.client.RestSubmitDataServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>servletName101</servlet-name>
-        <url-pattern>/rest_reg</url-pattern>
-    </servlet-mapping>
-
-
-    <servlet-mapping>
-        <servlet-name>servletName110</servlet-name>
-        <url-pattern>/rest_all-users</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName111</servlet-name>
-        <url-pattern>/rest_history-data-user</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName112</servlet-name>
-        <url-pattern>/rest_last-data-of-user</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName113</servlet-name>
-        <url-pattern>/rest_spec-month-user</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName114</servlet-name>
-        <url-pattern>/rest_view-user-history</url-pattern>
-    </servlet-mapping>
-
-
-    <servlet-mapping>
-        <servlet-name>servletName120</servlet-name>
-        <url-pattern>/rest_data-history</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName121</servlet-name>
-        <url-pattern>/rest_last-data</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName122</servlet-name>
-        <url-pattern>/rest_spec-month</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>servletName123</servlet-name>
-        <url-pattern>/rest_submit-data</url-pattern>
-    </servlet-mapping>
 
 </web-app>
