--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
         <aspectj.version>1.9.20.1</aspectj.version>
         <log4j.version>1.2.17</log4j.version>
         <slf4j-log4j12.version>2.0.5</slf4j-log4j12.version>
+        <lombok.version>1.18.26</lombok.version>
     </properties>
 
     <dependencies>
@@ -147,6 +148,13 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j-log4j12.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
