--- a/pom.xml
+++ b/pom.xml
@@ -56,18 +56,40 @@
         <javax.servlet.version>4.0.1</javax.servlet.version>
         <gson.version>2.10</gson.version>
         <jackson.version>2.15.1</jackson.version>
-        <mapstruct.version>1.6.0.Beta1</mapstruct.version>
+        <mapstruct.version>1.4.2.Final</mapstruct.version>
         <aspectj.version>1.9.20.1</aspectj.version>
         <log4j.version>1.2.17</log4j.version>
         <slf4j-log4j12.version>2.0.5</slf4j-log4j12.version>
-        <spring-core.version>6.1.4</spring-core.version>
-        <spring-beans.version>6.0.10</spring-beans.version>
-        <spring-context.version>6.0.10</spring-context.version>
-        <spring-webmvc.version>6.1.3</spring-webmvc.version>
+        <spring.version>6.1.1</spring.version>
+        <lombok.version>1.18.26</lombok.version>
+        <spring-security.version>5.3.4.RELEASE</spring-security.version>
+        <auth0.version>3.4.0</auth0.version>
+     <!--   <mapstruct-lombok.version>0.2.0</mapstruct-lombok.version> -->
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+
+     <!--   <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency> -->
+     <!--   <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency> -->
+     <!--   <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency> -->
+   <!--     <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${auth0.version}</version>
+        </dependency> -->
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -115,20 +137,19 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-      <!--  <dependency>
+    <!--    <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${javax.servlet.version}</version>
             <scope>provided</scope>
         </dependency> -->
 
-        <dependency>
+     <!--   <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>6.0.0</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -163,37 +184,52 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.22</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring-core.version}</version>
-        </dependency>
+    <!--    <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok-mapstruct-binding</artifactId>
+            <version>${mapstruct-lombok.version}</version>
+        </dependency> -->
+
+   <!--
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
             <version>${spring-beans.version}</version>
-        </dependency>
+        </dependency>   -->
 
-        <dependency>
+    <!--    <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency> -->
+
+  <!--      <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>${spring-context.version}</version>
-        </dependency>
+            <version>${spring-core.version}</version>
+        </dependency> -->
+
+    <!--    <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>  -->
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${spring-webmvc.version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
     </dependencies>
 
     <build>
+        <finalName>ms</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -219,13 +255,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <compilerVersion>17</compilerVersion>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -307,9 +336,14 @@
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                        <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
-                            <version>1.6.0.Beta1</version>
+                            <version>${mapstruct.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
