--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <log4j.version>1.2.17</log4j.version>
         <slf4j-log4j12.version>2.0.5</slf4j-log4j12.version>
         <lombok.version>1.18.26</lombok.version>
+        <jacarta.version>6.1.0-M1</jacarta.version>
     </properties>
 
     <dependencies>
@@ -113,10 +114,17 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-        <dependency>
+    <!--    <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${javax.servlet.version}</version>
+            <scope>provided</scope>
+        </dependency> -->
+
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>${jacarta.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -160,6 +168,7 @@
     </dependencies>
 
     <build>
+        <finalName>ms</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -273,9 +282,14 @@
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                        <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
-                            <version>1.6.0.Beta1</version>
+                            <version>${mapstruct.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
